--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,16 +2,16 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <!-- Jquery -->
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row flex flex-center">
         <p class="text-center section-header-text">
           {{{title}}}
