--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,7 +46,7 @@ body {
       font-size: 18px;
       margin: 0 auto;
       width: 100%;
-      max-width: 650px; }
+      width: 650px; }
       .resources .list-group .list-group-item .card .card-header {
         font-size: 20px;
         font-weight: 600;
@@ -90,5 +90,16 @@ body {
 
 ::-webkit-scrollbar {
   display: none; }
+
+@media (max-width: 991px) {
+  .section-header-text {
+    font-size: calc(40px * 1.5) !important; }
+  .section-subheader-text, .card-body, .card-header, .btn {
+    font-size: calc(18px * 1.5) !important;
+    line-height: calc(26px * 1.5) !important; }
+  .link a {
+    font-size: calc(18px * 1.2) !important; }
+  .card {
+    width: 100% !important; } }
 
 /*# sourceMappingURL=style.css.map */
