removes padding from list group

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -48,6 +48,7 @@ body
   align-items: center
   overflow: auto
   .list-group
+    padding: 0
     .list-group-item
       background-color: transparent
       border: none
