--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,59 +34,60 @@ body {
   flex-direction: column;
   align-items: center;
   overflow: auto; }
-  .resources .list-group .list-group-item {
-    background-color: transparent;
-    border: none;
-    margin-top: 1.5rem; }
-    .resources .list-group .list-group-item .card {
-      padding: 0;
+  .resources .list-group {
+    padding: 0; }
+    .resources .list-group .list-group-item {
+      background-color: transparent;
       border: none;
-      border-radius: 8px 8px 3px 3px;
-      box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
-      font-size: 18px;
-      margin: 0 auto;
-      width: 100%;
-      width: 650px; }
-      .resources .list-group .list-group-item .card .card-header {
-        font-size: 20px;
-        font-weight: 600;
-        background-color: #fa7073;
-        min-height: 3rem;
-        position: relative;
-        border-top-left-radius: 8px;
-        border-top-right-radius: 8px; }
-      .resources .list-group .list-group-item .card .card-body {
-        color: #505050;
-        padding: 2rem;
-        line-height: 26px; }
-      .resources .list-group .list-group-item .card .card-footer .link {
-        text-decoration: underline;
-        color: #505050;
-        justify-content: space-between;
-        display: flex;
-        align-items: flex-end; }
-        .resources .list-group .list-group-item .card .card-footer .link a {
-          color: #505050;
-          font-size: calc(18px * 0.9);
-          margin: 0;
-          height: min-content; }
-      .resources .list-group .list-group-item .card .card-footer .class-btn {
-        display: flex;
-        justify-content: center; }
-        .resources .list-group .list-group-item .card .card-footer .class-btn a {
-          width: 75%; }
-      .resources .list-group .list-group-item .card .card-footer .btn {
-        background-color: #fa7073;
+      margin-top: 1.5rem; }
+      .resources .list-group .list-group-item .card {
+        padding: 0;
         border: none;
-        box-shadow: 0 2px 0 #bd5e5b;
-        font-size: 16px;
-        font-weight: 700;
-        padding: 12px 40px 10px;
-        border-radius: 8px; }
-      .resources .list-group .list-group-item .card .card-footer span {
-        font-weight: calc(800 / 2.66); }
-      .resources .list-group .list-group-item .card .card-footer .card-link {
-        margin: 0 3rem; }
+        border-radius: 8px 8px 3px 3px;
+        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
+        font-size: 18px;
+        margin: 0 auto;
+        width: 650px; }
+        .resources .list-group .list-group-item .card .card-header {
+          font-size: 20px;
+          font-weight: 600;
+          background-color: #fa7073;
+          min-height: 3rem;
+          position: relative;
+          border-top-left-radius: 8px;
+          border-top-right-radius: 8px; }
+        .resources .list-group .list-group-item .card .card-body {
+          color: #505050;
+          padding: 2rem;
+          line-height: 26px; }
+        .resources .list-group .list-group-item .card .card-footer .link {
+          text-decoration: underline;
+          color: #505050;
+          justify-content: space-between;
+          display: flex;
+          align-items: flex-end; }
+          .resources .list-group .list-group-item .card .card-footer .link a {
+            color: #505050;
+            font-size: calc(18px * 0.9);
+            margin: 0;
+            height: min-content; }
+        .resources .list-group .list-group-item .card .card-footer .class-btn {
+          display: flex;
+          justify-content: center; }
+          .resources .list-group .list-group-item .card .card-footer .class-btn a {
+            width: 75%; }
+        .resources .list-group .list-group-item .card .card-footer .btn {
+          background-color: #fa7073;
+          border: none;
+          box-shadow: 0 2px 0 #bd5e5b;
+          font-size: 16px;
+          font-weight: 700;
+          padding: 12px 40px 10px;
+          border-radius: 8px; }
+        .resources .list-group .list-group-item .card .card-footer span {
+          font-weight: calc(800 / 2.66); }
+        .resources .list-group .list-group-item .card .card-footer .card-link {
+          margin: 0 3rem; }
 
 ::-webkit-scrollbar {
   display: none; }
