--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,11 +13,11 @@
         </div>
         <div class="card-footer">
           <div class="row">
-            <div class="col-3"></div>
-            <div class="col-6 class-btn">
+            <div class="col"></div>
+            <div class="col button-box">
               <a href="#{{button.link}}" class="btn btn-primary">{{button.display}}</a>
             </div>
-            <div class="col-3 link">
+            <div class="col links">
               {{#each links}}
                 <a href="#{{link}}" class="card-link align-baseline">{{display}}</a>
               {{/each}}
