--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,6 +2,14 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <!-- Proxima Nova font -->
+    <style type="text/css">    @font-face{
+      font-family:"Proxima Nova";
+      src:url("/Fonts/1132159/7e90123f-e4a7-4689-b41f-6bcfe331c00a.eot?#iefix");
+      src:url("/Fonts/1132159/7e90123f-e4a7-4689-b41f-6bcfe331c00a.eot?#iefix") format("eot"),
+      url("Fonts/1132159/64017d81-9430-4cba-8219-8f5cc28b923e.woff2") format("woff2"),url("Fonts/1132159/e56ecb6d-da41-4bd9-982d-2d295bec9ab0.woff") format("woff"),url("Fonts/1132159/2aff4f81-3e97-4a83-9e6c-45e33c024796.ttf") format("truetype");
+    }
+    </style>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <!-- Jquery -->
