--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -14,13 +14,14 @@ $line-height: 26px
 body
   background-color: $background-color!important
   padding: 50px
-  font-family: proxima-nova,proxima nova,open sans,sans-serif,system
+  font-family: proxima-nova,open sans,sans-serif,system
   font-weight: 300
   color: $white-font!important
   font-size: $default-font-size!important
+  word-spacing: 1px
 
 .section-header-text
-  font-family: proxima-nova,proxima nova,open sans,sans-serif,system
+  font-family: proxima-nova-bold,open sans,sans-serif,system
   font-weight: $bold-font
   font-size: $header-font-size
   line-height: 50px!important
@@ -104,7 +105,7 @@ body
                 margin: 0 auto
                 text-transform: uppercase
                 white-space: nowrap
-                max-width: 100%
+                width: 100%
             span
               font-weight: calc(#{$bold-font} / 2.66)
             .card-link
