--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,10 +4,16 @@
     <title>{{title}}</title>
     <!-- Proxima Nova font -->
     <style type="text/css">    @font-face{
-      font-family:"Proxima Nova";
+      font-family:"Proxima-Nova";
       src:url("/Fonts/1132159/7e90123f-e4a7-4689-b41f-6bcfe331c00a.eot?#iefix");
       src:url("/Fonts/1132159/7e90123f-e4a7-4689-b41f-6bcfe331c00a.eot?#iefix") format("eot"),
       url("Fonts/1132159/64017d81-9430-4cba-8219-8f5cc28b923e.woff2") format("woff2"),url("Fonts/1132159/e56ecb6d-da41-4bd9-982d-2d295bec9ab0.woff") format("woff"),url("Fonts/1132159/2aff4f81-3e97-4a83-9e6c-45e33c024796.ttf") format("truetype");
+    }
+    </style>
+    <style type="text/css">    @font-face{
+      font-family:"Proxima-Nova-Bold";
+      src:url("Fonts/1132183/fbc6b03a-b3a1-427c-a884-053deca3a53c.eot?#iefix");
+      src:url("Fonts/1132183/fbc6b03a-b3a1-427c-a884-053deca3a53c.eot?#iefix") format("eot"),url("Fonts/1132183/0d416408-95c6-4ad7-b08d-e60573d3b37d.woff2") format("woff2"),url("Fonts/1132183/d999c07b-a049-4eb5-b8a6-4f36ae25e67e.woff") format("woff"),url("Fonts/1132183/4d4a75f5-d32a-4a09-8665-133afd39cc37.ttf") format("truetype");
     }
     </style>
     <!-- Latest compiled and minified CSS -->
